tests/Tuc/Fixtures/errors/LoopWithoutCondition.tuc
tuc parse error test
participants
    GenericService parts

loop
